--- a/src/components/Preview/style.css
+++ b/src/components/Preview/style.css
@@ -119,3 +119,10 @@
     }
   }
 }
+@media screen and (max-width: 999px) {
+  .containerWrapper {
+    min-width: 100%;
+    margin-top: 20px;
+    margin-left: 0;
+  }
+}
